--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body style="margin: 0; padding: 0; display: flex; justify-content: center; align-items: center;">
             
         
-        <div id="11697cc3-a96f-4b7c-998f-63b6ba80192f" style="width: 100%; height: 100%;" class="plotly-graph-div"></div>
+        <div id="11697cc3-a96f-4b7c-998f-63b6ba80192f" style="width: 100%; height: 100%; margin: auto" class="plotly-graph-div"></div>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <script type="text/javascript">
             (function(){
